bdr.BDR2.scala.error
Erreur de compilation :
BDR2:20: error: ')' expected but '}' found.
	}
        ^